# hub-deploy

./: .gitignore  .pre-commit-config.yaml  .sops.yaml  README.md  noxfile.py  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: images.yaml
charts/hub/: Chart.yaml  values.yaml
charts/hub/templates/: nfs-volume.yaml  user-serviceaccount.yaml
charts/support/: Chart.yaml  values.yaml
charts/support/templates/: cluster-issuer.yaml  gateway-config.yaml  gateway.yaml
clusters/demo/: kubeconfig.enc.yaml
clusters/demo/support/: config.yaml
docs/: notes.md
hubs/_common/: config.yaml
hubs/demo/: config.enc.yaml  config.yaml
images/user/: Dockerfile  entrypoint.sh  install-opencode.sh  mamba.sh  mambarc  pixi.toml
images/user/jupyter-ai-biorouter-acp/: pyproject.toml
images/user/jupyter-ai-biorouter-acp/jupyter_ai_biorouter_acp/: persona.py
tf/clusters/demo/: .terraform.lock.hcl  main.tf
tf/modules/gke_cluster/: resource.tf  variables.tf
tf/modules/hub_deploy/: resource.tf  variables.tf
tf/modules/lightcone/: cloudbuild.tf  variables.tf
tools/: tofu-fmt
